--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t shinethroughtrees/EBTest -f ./client/Dockerfile.dev ./client
+  - docker build -t shinethroughtrees/test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true shinethroughtrees/EBTest npm test -- --coverage
