--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - docker build -t shinethroughtrees/test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true shinethroughtrees/EBTest npm test -- --coverage
+  - docker run -e CI=true shinethroughtrees/test npm test -- --coverage
 
 after_success:
   - docker build -t shinethroughtrees/multi-client ./client
