--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
   env: "MultiDocker-env"
   bucket_name: "elasticbeanstalk-ap-northeast-2-103975427298
   "
-  bucket_path: ".elasticbeanstalk"
+  bucket_path: "multi-docker"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
